--- a/css/style.css
+++ b/css/style.css
@@ -739,9 +739,9 @@ section {
 #master {
     background: rgb(255, 0, 0);
     background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 226, 0, 1) 100%);
-    color: #000000;
+    color: #1a1919;
     width: 0;
-    height: 2rem;
+    height: 1.5rem;
 }
 
 #pix{
