--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
 
@@ -21,6 +21,7 @@
 }
 
 * {
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
