--- a/css/style.css
+++ b/css/style.css
@@ -934,10 +934,9 @@ section {
 
     .whats{
         position: fixed;
-        bottom: 1rem;
-        right: .1rem;
+        bottom: 3rem;
+        right: 3rem;
         z-index: 1000;
-        width: 40px;
     
     
     }
